examples/fail/semantic/empty_array_without_expected_type.bina
// EXPECT_SEMANTIC_ERROR: cannot infer type of empty array literal
fn main() -> int {
    let values = [];
    return 0;
}
